--- a/metajam_example/HBR_watershed_2.Rmd
+++ b/metajam_example/HBR_watershed_2.Rmd
@@ -40,37 +40,26 @@ In our case, we'll just put it into the metajam_example folder.
 
 ```{r}
 
+#Pull data in from repository using function
+HBR_watershed_2_data <- data_from_EDI(my_data_url = "https://portal.edirepository.org/nis/dataviewer?packageid=knb-lter-hbr.4.15&entityid=ab131091ce4cf463e0a75c1f2511e05d", desired_path_to_data = "~/SI_river_data")
+
+#Pull data in from repository using the original method
 
 #eg desired_path_to_data <- "~/Desktop"
-desired_path_to_data <- "~/SI_river_data"
+#desired_path_to_data <- "~/SI_river_data"
 
 # create the folder if it does not exist yet
-dir.create(desired_path_to_data, showWarnings = FALSE)
+#dir.create(desired_path_to_data, showWarnings = FALSE)
 
-
-
-```
-
-#### Step 4: Download the data by pasting the link you just copied
-
-```{r}
-
-my_data_url <- "https://portal.edirepository.org/nis/dataviewer?packageid=knb-lter-hbr.4.15&entityid=ab131091ce4cf463e0a75c1f2511e05d"
+#my_data_url <- "https://portal.edirepository.org/nis/dataviewer?packageid=knb-lter-hbr.4.15&entityid=ab131091ce4cf463e0a75c1f2511e05d"
 
 # this will download the data into a folder and save the path to that folder
-downloaded_data <- download_d1_data(data_url = my_data_url, path = desired_path_to_data)
+#downloaded_data <- download_d1_data(data_url = my_data_url, path = desired_path_to_data)
 
+#The missingvalueCodes for this dataset are "-888.88", "-888.888", and "-888".
+#my_data <- read_d1_files(downloaded_data, na = c("-888.88", "-888.888", "-888"))
 
-```
-
-#### Step 5: Now read in the data (with all the metadata). The missingvalueCodes for this dataset are "-888.88", "-888.888", and "-888".
-
-```{r}
-
-
-my_data <- read_d1_files(downloaded_data, na = c("-888.88", "-888.888", "-888"))
-
-HBR_watershed_2_data <- my_data$data
+#HBR_watershed_2_data <- my_data$data
 
 ```
 
@@ -78,76 +67,64 @@ HBR_watershed_2_data <- my_data$data
 ###Step 6: data cleanup
 ```{r}
 
+#This data cleanup function replaces the cleanup below. The problem is this step was really variable across datasets so this does not have broad applicability across EDI
+HBR_watershed_2_data <- EDI_river_data_cleanup(HBR_watershed_2_data)
 
 #Adding a column to identify the LTER site - Hubbar Brook HBR
 
 # the tidy way
-HBR_watershed_2_data <- HBR_watershed_2_data %>% 
-  add_column(LTER = 'HBR', .before = "Year")
+#HBR_watershed_2_data <- HBR_watershed_2_data %>% 
+ # add_column(LTER = 'HBR', .before = "Year")
 
 
 #There is no site name in the csv file so I pulled this site identifier from the data portal
 
-HBR_watershed_2_data <- HBR_watershed_2_data %>% 
-  add_column('Site/Stream Name' = 'knb-lter-hbr.4.15', .before = "Year")
+#HBR_watershed_2_data <- HBR_watershed_2_data %>% 
+ # add_column('Site/Stream Name' = 'knb-lter-hbr.4.15', .before = "Year")
 
 
 # I can see that the column Year_Month includes the info from the column in the template 'Sampling Date' so I want to rename that column 
 
-HBR_watershed_2_data <- HBR_watershed_2_data %>% 
-  rename('Sampling Date' = 'Year_Month')
-
-
-```
-
-```{r}
+#HBR_watershed_2_data <- HBR_watershed_2_data %>% 
+#  rename('Sampling Date' = 'Year_Month')
 
 #Removing the volwt_ preface from many of the column names. That preface was preventing me from identifying which columns were a match to the template 
 
 
-names(HBR_watershed_2_data)[7:31] <- substring(names(HBR_watershed_2_data)[7:31],7,15)
+#names(HBR_watershed_2_data)[7:31] <- substring(names(HBR_watershed_2_data)[7:31],7,15)
 
 #SpecCond is an exact match I just want to make the column names an exact match
-HBR_watershed_2_data <- HBR_watershed_2_data %>% 
-  rename('Spec Cond' = 'SpecCond')	
+#HBR_watershed_2_data <- HBR_watershed_2_data %>% 
+ # rename('Spec Cond' = 'SpecCond')	
 
-HBR_watershed_2_data <- HBR_watershed_2_data %>% 
-  rename('Si' = 'SiO2')
+#HBR_watershed_2_data <- HBR_watershed_2_data %>% 
+#  rename('Si' = 'SiO2')
+
 
 ```
-
-
 
 
 Reading in template
 
 ```{r}
 
-template <- read_excel(here("metajam_example", "Raw stream data template.xlsx"), 
-                               col_types = "text"
-                               ) %>%
-  mutate(`Sampling Date` = as.Date(`Sampling Date`))
+#Using a function
+template <- import_river_data_template(river_data_folder = "metajam_example", river_data_template = "Raw stream data template.xlsx")
+
+#Old way
+#template <- read_excel(here("metajam_example", "Raw stream data template.xlsx"), 
+#                               col_types = "text"
+#                               ) %>%
+#  mutate(`Sampling Date` = as.Date(`Sampling Date`))
 
 ```
 
 
 ```{r}
 
-#template <- read_excel(here("metajam_example", "Stream_Data_Template.xlsx"), 
-   #                            sheet = "Raw Data",
-     #                          col_types = "text"
-     #                          ) %>%
-  #mutate(`Sampling Date` = as.Date(`Sampling Date`))
+#function to fuzzymatch
 
-#Adding a column for NO3 so that the template includes both an NO3 column and NOx column
-#template <- template %>% 
- # add_column('NOx' = '.', .before = "NO3")
-
-```
-
-```{r}
-
-
+fuzzymatch_river_data(template, HBR_watershed_2_data)
 # Start by matching by closest name as a first pass. 
   # Note that we match the lower case names
   # Note that the weight i= 0.1 says that we will be more likely to match if watershed 1 = template + extra
@@ -184,12 +161,7 @@ Loading the solute units template
 
 ```{r}
 
-
-solute_units_Template <- read_excel(here("metajam_example", "Stream_Data_Template.xlsx"), sheet = "Solute Units" )
-
-solute_units_Template <- solute_units_Template  %>%
-  select(Measurement, Unit)
-
+solute_units_Template <- import_solute_units_template(folder_name = "metajam_example", template_name = "Stream_Data_Template.xlsx")
 
 ```
 
