--- a/metajam_example/NWT_albisolu_watershed.Rmd
+++ b/metajam_example/NWT_albisolu_watershed.Rmd
@@ -43,74 +43,17 @@ In our case, we'll just put it into the metajam_example folder.
 
 ```{r}
 
-#eg desired_path_to_data <- "~/Desktop"
-desired_path_to_data <- "~/SI_river_data"
-
-# create the folder if it does not exist yet
-dir.create(desired_path_to_data, showWarnings = FALSE)
+albisolu_NWT_data <- data_from_EDI(my_data_url = "https://portal.edirepository.org/nis/dataviewer?packageid=knb-lter-nwt.103.12&entityid=413c3eb5a1a52e3ce2f9e52b3565aadd", desired_path_to_data = "~/SI_river_data")
 
 
 ```
 
-
-#### Step 4: Download the data by pasting the link you just copied
-
-```{r}
-
-
-my_data_url <- "https://portal.edirepository.org/nis/dataviewer?packageid=knb-lter-nwt.103.12&entityid=413c3eb5a1a52e3ce2f9e52b3565aadd"
-
-# this will download the data into a folder and save the path to that folder
-downloaded_data <- download_d1_data(data_url = my_data_url, path = desired_path_to_data)
-
-```
-
-
-#### Step 5: Now read in the data (with all the metadata)
-
-```{r}
-
-my_data <- read_d1_files(downloaded_data, na = c("u", "NP", "DNS", "EQCL"))
-
-albisolu_NWT_data <- my_data$data
-
-
-
-```
 
 ###Step 6: data cleanup
 
 ```{r}
 
-
-# I can see that the column Year_Month includes the info from the column in the template 'Sampling Date' so I want to rename that column 
-
-names(albisolu_NWT_data) <- as.character(names(albisolu_NWT_data))
-
-albisolu_NWT_data <- albisolu_NWT_data %>% 
-  rename('Sampling Date' = 'date')
-
-albisolu_NWT_data <- albisolu_NWT_data %>% 
-  rename('Site/Stream Name' = 'local_site')
-
-albisolu_NWT_data <- albisolu_NWT_data %>% 
-  rename('LTER' = 'LTER_site')
-
-albisolu_NWT_data <- albisolu_NWT_data %>% 
-  rename('Time' = 'time')
-
-albisolu_NWT_data <- albisolu_NWT_data %>% 
-  rename('Conductivity' = 'cond')
-
-albisolu_NWT_data <- albisolu_NWT_data %>% 
-  rename('alkalinity' = 'alkal')
-
-albisolu_NWT_data <- albisolu_NWT_data %>% 
-  rename('DSi' = 'Si')
-
-names(albisolu_NWT_data) <- gsub("[^0-9A-Za-z///' ]","", names(albisolu_NWT_data))
-
-
+albisolu_NWT_data <- EDI_river_data_cleanup(my_dataframe = albisolu_NWT_data)
 
 ```
 
@@ -119,10 +62,7 @@ names(albisolu_NWT_data) <- gsub("[^0-9A-Za-z///' ]","", names(albisolu_NWT_data
 Read in template
 ```{r}
 
-template <- read_excel(here("metajam_example", "Raw stream data template.xlsx"), 
-                               col_types = "text"
-                               ) %>%
-  mutate(`Sampling Date` = as.Date(`Sampling Date`))
+template <- import_river_data_template()
 
 ```
 
@@ -132,10 +72,8 @@ Fuzzy match
 # Start by matching by closest name as a first pass. 
   # Note that we match the lower case names
   # Note that the weight i= 0.1 says that we will be more likely to match if watershed 1 = template + extra
-(fuzzy_match <- tibble(template = names(template)) %>%
-   mutate(watershed10 = names(albisolu_NWT_data)[amatch(tolower(template), tolower(names(albisolu_NWT_data)), maxDist = 1, weight = c(d=1,i=0.1,s=1,t=1))])
-)
 
+fuzzymatch_river_data(river_template_name = template, data_name = albisolu_NWT_data)
 
 ```
 
@@ -157,7 +95,6 @@ correct_colnames <- lookup_table$template
 
 correct_colnames <- as.character(correct_colnames)
 
-my_data$attribute_metadata
 
 ```
 Once the lookup table is as filled out as possible, we can remove all rows that still had no match.
@@ -198,12 +135,7 @@ Loading the solute units template
 
 ```{r}
 
-
-solute_units_Template <- read_excel(here("metajam_example", "Stream_Data_Template.xlsx"), sheet = "Solute Units" )
-
-solute_units_Template <- solute_units_Template  %>%
-  select(Measurement, Unit)
-
+solute_units_Template  <- import_solute_units_template()
 
 ```
 
